ceci est un commentaire

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
+
 canvas {
     border: 1px solid #d3d3d3;
     background-color: #b844444d;
@@ -16,6 +17,14 @@ canvas {
 <script type="module" src="utilitaires.js"></script>
 <script type="module" src="collide.js"></script>
 <body >
+    <img id="level1" width="0" height="0" src="sprite\Map\MapFinale2.png">
+    <img id="PlayerFall" width="0" height="0" src="sprite\Character\PlayerFall.png">
+    <img id="PlayerJumpRight" width="0" height="0" src="sprite\Character\PlayerJump.png">
+    <img id="PlayerRunningRight" width="0" height="0" src="sprite\Character\PlayerRunning.png">
+    <img id="PlayerJumpLeft" width="0" height="0" src="sprite\Character\PlayerJumpReverted.png">
+    <img id="PlayerRunningLeft" width="0" height="0" src="sprite\Character\PlayerRunningReverted.png">
+    <img id="PlayerStandingFace" width="0" height="0" src="sprite\Character\PlayerStandingFace.png">
+    <img id="PlayerDead" width="0" height="0" src="sprite\Character\PlayerDead.png">
 <script type="module" >
 
 
