ceci est un commentaire

--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@ canvas {
     <img id="PlayerRunningLeft" width="0" height="0" src="sprite\Character\PlayerRunningReverted.png">
     <img id="PlayerStandingFace" width="0" height="0" src="sprite\Character\PlayerStandingFace.png">
     <img id="PlayerDead" width="0" height="0" src="sprite\Character\PlayerDead.png">
+    <img id="PauseMenu" width="0" height="0" src="sprite\UI\PauseMenu.png">
 <script type="module" >
 
 
