ceci est un commentaire

--- a/main.html
+++ b/main.html
@@ -17,7 +17,8 @@ canvas {
 <script type="module" src="utilitaires.js"></script>
 <script type="module" src="collide.js"></script>
 <body >
-    <img id="level1" width="0" height="0" src="sprite\Map\MapFinale2.png">
+    <img id="level1" width="0" height="0" src="sprite\Map\MapFinale.png">
+    <img id="level2" width="0" height="0" src="sprite\Map\MapFinale2.png">
     <img id="PlayerFall" width="0" height="0" src="sprite\Character\PlayerFall.png">
     <img id="PlayerJumpRight" width="0" height="0" src="sprite\Character\PlayerJump.png">
     <img id="PlayerRunningRight" width="0" height="0" src="sprite\Character\PlayerRunning.png">
