--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 
 canvas {
     border: 1px solid #d3d3d3;
-    background-color: #b844444d;
+    background-color: #000000;
     height: 80%;
     width: 80%;
 }
