ceci est un commentaire

--- a/main.html
+++ b/main.html
@@ -27,6 +27,20 @@ canvas {
     <img id="PlayerStandingFace" width="0" height="0" src="sprite\Character\PlayerStandingFace.png">
     <img id="PlayerDead" width="0" height="0" src="sprite\Character\PlayerDead.png">
     <img id="PauseMenu" width="0" height="0" src="sprite\UI\PauseMenu.png">
+
+    <img id="Bullet" width="0" height="0" src="sprite\Bullet\BalleDroite.png">
+    <img id="BulletRight" width="0" height="0" src="sprite\Bullet\BalleDroite.png">
+    <img id="BulletLeft" width="0" height="0" src="sprite\Bullet\BalleGauche.png">
+    <img id="BulletUpRight" width="0" height="0" src="sprite\Bullet\BalleHautDroit.png">
+    <img id="BulletUpLeft" width="0" height="0" src="sprite\Bullet\BalleHautGauche.png">
+    <img id="BulletDownRight" width="0" height="0" src="sprite\Bullet\BalleBasDroit.png">
+    <img id="BulletDownLeft" width="0" height="0" src="sprite\Bullet\BalleBasGauche.png">
+    <img id="BulletUp" width="0" height="0" src="sprite\Bullet\BalleHaut.png">
+    <img id="BulletDown" width="0" height="0" src="sprite\Bullet\BalleBas.png">
+    <img id="Ennemi1" width="0" height="0" src="sprite\Ennemies\Enemy1Idle.png">
+    <img id="Ennemi2" width="0" height="0" src="sprite\Ennemies\Enemy2Idle.png">
+    <img id="Ennemi3" width="0" height="0" src="sprite\Ennemies\Enemy3Idle.png">
+
 <script type="module" >
 
 
