--- a/main.html
+++ b/main.html
@@ -44,6 +44,8 @@ canvas {
     <img id="Ennemi1" width="0" height="0" src="sprite\Ennemies\Enemy1Idle.png">
     <img id="Ennemi2" width="0" height="0" src="sprite\Ennemies\Enemy2Idle.png">
     <img id="Ennemi3" width="0" height="0" src="sprite\Ennemies\Enemy3Idle.png">
+    <img id="CoinLarge" width="0" height="0" src="sprite\Coin\CoinLarge.png">
+    <img id="CoinSmall" width="0" height="0" src="sprite\Coin\CoinSmall.png">
     
 <script type="module" >
 
