ceci est un commentaire

--- a/GameFiles/main.html
+++ b/GameFiles/main.html
@@ -67,6 +67,8 @@
     <img id="EnnemiFlying" width="0" height="0" src="sprite\Ennemies\Flying2-1.png">
     <img id="CoinLarge" width="0" height="0" src="sprite\Coin\CoinLarge.png">
     <img id="CoinSmall" width="0" height="0" src="sprite\Coin\CoinSmall.png">
+    <img id="EndGame" width="0" height="0" src="sprite\EndGameSprite.png">
+
 
 
     
