ceci est un commentaire

--- a/GameFiles/main.html
+++ b/GameFiles/main.html
@@ -87,7 +87,7 @@
         
     </script>
 
-    <canvas id="canvas" width="150" height="150"></canvas>
+    <canvas id="canvas" ></canvas>
 
     
 
